--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "npm run build:dev",
-    "build:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql",
+    "build:dev": "nodemon src/server.ts --exec \"ts-node\" src/server.ts -e ts,graphql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "chefcookit",
